--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-  "name": "node-js-template",
-  "version": "1.0.0",
-  "description": "NodeJs technology configuration and dependencies template for web application projects",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/asshleygozar/nodejs-template.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/asshleygozar/nodejs-template/issues"
-  },
-  "homepage": "https://github.com/asshleygozar/nodejs-template#readme",
-  "devDependencies": {
-    "webpack": "^5.99.9",
-    "webpack-cli": "^6.0.1"
-  }
+	"name": "node-js-template",
+	"version": "1.0.0",
+	"description": "NodeJs technology configuration and dependencies template for web application projects",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/asshleygozar/nodejs-template.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/asshleygozar/nodejs-template/issues"
+	},
+	"homepage": "https://github.com/asshleygozar/nodejs-template#readme",
+	"devDependencies": {
+		"@eslint/js": "^9.29.0",
+		"eslint": "^8.2.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-prettier": "^5.5.0",
+		"globals": "^16.2.0",
+		"prettier": "^3.5.3",
+		"webpack": "^5.99.9",
+		"webpack-cli": "^6.0.1"
+	}
 }
