--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "NodeJs technology configuration and dependencies template for web application projects",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "npx webpack",
+		"dev": "npx webpack serve"
 	},
 	"repository": {
 		"type": "git",
@@ -19,14 +21,19 @@
 	"homepage": "https://github.com/asshleygozar/nodejs-template#readme",
 	"devDependencies": {
 		"@eslint/js": "^9.29.0",
+		"css-loader": "^7.1.2",
 		"eslint": "^8.2.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "^10.1.5",
 		"eslint-plugin-import": "^2.25.2",
 		"eslint-plugin-prettier": "^5.5.0",
 		"globals": "^16.2.0",
+		"html-loader": "^5.1.0",
+		"html-webpack-plugin": "^5.6.3",
 		"prettier": "^3.5.3",
+		"style-loader": "^4.0.0",
 		"webpack": "^5.99.9",
-		"webpack-cli": "^6.0.1"
+		"webpack-cli": "^6.0.1",
+		"webpack-dev-server": "^5.2.2"
 	}
 }
