--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "npx webpack",
-		"dev": "npx webpack serve"
+		"start": "npx webpack serve --open --config webpack.dev.js",
+		"build": "npx webpack --config webpack.prod.js",
+		"dev" : "npx webpack serve --config webpack.dev.js"
 	},
 	"repository": {
 		"type": "git",
