--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "commonjs": true
   },
   "extends": ["airbnb-base", "prettier"],
   "plugins": ["prettier"]
