--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "npx webpack serve --open --config webpack.dev.js",
 		"build": "npx webpack --config webpack.prod.js",
-		"dev" : "npx webpack serve --config webpack.dev.js"
+		"dev": "npx webpack serve --config webpack.dev.js"
 	},
 	"repository": {
 		"type": "git",
@@ -31,6 +31,7 @@
 		"globals": "^16.2.0",
 		"html-loader": "^5.1.0",
 		"html-webpack-plugin": "^5.6.3",
+		"jest": "^30.0.3",
 		"prettier": "^3.5.3",
 		"style-loader": "^4.0.0",
 		"webpack": "^5.99.9",
